@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-04-01T01:25:52Z",
-  "count_outdated" : 1811,
-  "uniques_outdated" : 1052,
-  "count" : 1815,
-  "uniques" : 1056,
+  "timestamp" : "2025-04-02T01:18:17Z",
+  "count_outdated" : 1812,
+  "uniques_outdated" : 1053,
+  "count" : 1816,
+  "uniques" : 1057,
   "clones" : [
-    {
-      "timestamp": "2025-03-19T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-03-20T00:00:00Z",
       "count": 2,
@@ -25,6 +16,15 @@
     },
     {
       "timestamp": "2025-03-26T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-04-01T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
